--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,48 +1,3 @@
-add_library(GeographicLib
-    GeographicLib/Accumulator.cpp
-    GeographicLib/AlbersEqualArea.cpp
-    GeographicLib/AzimuthalEquidistant.cpp
-    GeographicLib/CassiniSoldner.cpp
-    GeographicLib/CircularEngine.cpp
-    GeographicLib/DMS.cpp
-    GeographicLib/Ellipsoid.cpp
-    GeographicLib/EllipticFunction.cpp
-    GeographicLib/GARS.cpp
-    GeographicLib/Geocentric.cpp
-    GeographicLib/GeoCoords.cpp
-    GeographicLib/Geodesic.cpp
-    GeographicLib/GeodesicExact.cpp
-    GeographicLib/GeodesicExactC4.cpp
-    GeographicLib/GeodesicLine.cpp
-    GeographicLib/GeodesicLineExact.cpp
-    GeographicLib/Geohash.cpp
-    GeographicLib/Geoid.cpp
-    GeographicLib/Georef.cpp
-    GeographicLib/Gnomonic.cpp
-    GeographicLib/GravityCircle.cpp
-    GeographicLib/GravityModel.cpp
-    GeographicLib/LambertConformalConic.cpp
-    GeographicLib/LocalCartesian.cpp
-    GeographicLib/MagneticCircle.cpp
-    GeographicLib/MagneticModel.cpp
-    GeographicLib/Math.cpp
-    GeographicLib/MGRS.cpp
-    GeographicLib/NormalGravity.cpp
-    GeographicLib/OSGB.cpp
-    GeographicLib/PolarStereographic.cpp
-    GeographicLib/PolygonArea.cpp
-    GeographicLib/Rhumb.cpp
-    GeographicLib/SphericalEngine.cpp
-    GeographicLib/TransverseMercator.cpp
-    GeographicLib/TransverseMercatorExact.cpp
-    GeographicLib/Utility.cpp
-    GeographicLib/UTMUPS.cpp
-)
-
-target_include_directories(GeographicLib PRIVATE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/../include
-)
-
 add_library(QCustomPlot
     QCustomPlot/qcustomplot.cpp
 )
@@ -112,7 +67,7 @@ target_include_directories(FlysightViewer PRIVATE
 )
 
 target_link_libraries(FlysightViewer
-    GeographicLib
+    flysight::flysight
     QCustomPlot
     Qt5::Widgets
     Qt5::Sql
